# BS_DPI

./: .gitignore  README.md  create_folders.py  greyscale.py  greyscale_generator.py  mask.py  mask_generator.py  pyproject.toml  resize.py
scripts/: all.py  blur.py  create_folders.py  darken.py  greyscale.py  mask.py  noise.py  over_expose.py  paths.py  prefix_to_files.py  resize.py
scripts/lib/: main.py  paths.py
