[tool.poetry]
name = "generate-segmentation-masks"
version = "0.1.0"
description = ""
authors = ["turcuciprian <turcuciprian1@gmail.com>"]
readme = "README.md"
packages = [{include = "generate_segmentation_masks"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pillow = "^9.5.0"
opencv-python-headless = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
